--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
-  "name": "karma-webpack",
-  "version": "5.0.1",
-  "description": "Use webpack with karma",
+  "name": "karma-rspack",
+  "version": "1.0.0",
+  "description": "Use rspack with karma",
   "license": "MIT",
-  "repository": "webpack-contrib/karma-webpack",
   "author": "Tobias Koppers @sokra",
-  "homepage": "https://github.com/webpack-contrib/karma-webpack",
-  "bugs": "https://github.com/webpack-contrib/karma-webpack/issues",
   "main": "lib",
   "engines": {
     "node": ">= 18"
@@ -26,14 +23,13 @@
     "test:coverage": "jest --collectCoverageFrom='lib/**/*.js' --coverage",
     "ci:lint": "npm run lint && npm run security",
     "ci:test": "npm run test -- --runInBand",
-    "ci:coverage": "npm run test:coverage -- --runInBand",
-    "defaults": "webpack-defaults"
+    "ci:coverage": "npm run test:coverage -- --runInBand"
   },
   "files": [
     "lib"
   ],
   "peerDependencies": {
-    "webpack": "^5.0.0"
+    "@rspack/core": "^1.0.3"
   },
   "dependencies": {
     "glob": "^7.1.3",
@@ -47,6 +43,7 @@
     "@babel/preset-env": "^7.23.2",
     "@commitlint/cli": "^18.0.0",
     "@commitlint/config-conventional": "^7.1.1",
+    "@rspack/core": "^1.0.3",
     "@webpack-contrib/eslint-config-webpack": "^3.0.0",
     "babel-jest": "^29.7.0",
     "chai": "^4.1.2",
@@ -70,11 +67,10 @@
     "pre-commit": "^1.2.2",
     "prettier": "^1.14.2",
     "puppeteer": "^21.4.0",
-    "standard-version": "^9.5.0",
-    "webpack": "^5.89.0"
+    "standard-version": "^9.5.0"
   },
   "keywords": [
-    "webpack"
+    "rspack"
   ],
   "jest": {
     "testEnvironment": "node"
